--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,9 @@
     "start_url": "index.html",
     "icons": [
         {
-            "src": "image/icon.jpg",
+            "src": "image/icon.png",
             "sizes": "192x192",
-            "type": "image/jpg"
+            "type": "image/png"
         }
     ]
 }
